--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       <main>
           <h1>Let's Coffee</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dolor felis, posuere quis quam id, pellentesque ornare nulla. Ut efficitur, libero non consequat faucibus, urna leo dapibus est, eu rhoncus lacus lacus vel enim. Integer vel justo eget quam blandit sagittis. Phasellus vitae semper purus, ut sagittis lorem. Maecenas non lectus eros. Integer semper vestibulum ipsum, et suscipit dolor. Vivamus sit amet rhoncus ante. Suspendisse sem risus, maximus quis orci at, laoreet varius lectus. Suspendisse blandit rhoncus nibh eget maximus. Aliquam a pretium justo, vitae condimentum risus. Nam consequat purus sit amet ligula gravida, vitae auctor turpis finibus. Morbi placerat sapien a orci iaculis, vel maximus felis rutrum. 
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec dolor felis, posuere quis quam id, pellentesque ornare nulla. Ut efficitur, libero non consequat faucibus, urna leo dapibus est, eu rhoncus lacus lacus vel enim. Integer vel justo eget quam blandit sagittis. Phasellus vitae semper purus, ut sagittis lorem. Maecenas non lectus eros. Integer semper vestibulum ipsum, et suscipit dolor. Vivamus sit amet rhoncus ante. Suspendisse sem risus, maximus quis orci at, laoreet varius lectus. Suspendisse blandit rhoncus nibh eget maximus. Aliquam a pretium justo, vitae condimentum risus. 
           </p>
 
           <a href="mailto:superbaozheng@gmail.com?Subject=Reservation" target="_blank">MAKE RESERVATION</a>
